--- a/GS - Dotnet/SafeZone.Application/SafeZone.Application.csproj
+++ b/GS - Dotnet/SafeZone.Application/SafeZone.Application.csproj
@@ -4,6 +4,13 @@
     <ProjectReference Include="..\SafeZone.Domain\SafeZone.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+    <PackageReference Include="Microsoft.ML.DataView" Version="4.0.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
