--- a/GS - Dotnet/SafeZone.API/SafeZone.API.csproj
+++ b/GS - Dotnet/SafeZone.API/SafeZone.API.csproj
@@ -13,15 +13,15 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.RateLimiting" Version="7.0.0-rc.2.22476.2" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" /> <!-- Alterado para versão 8.0.5 -->
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5"> <!-- Alterado para versão 8.0.5 -->
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		  <PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
-		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.5" /> <!-- Alterado para versão 8.0.5 -->
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.5" /> <!-- Alterado para versão 8.0.5 -->
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
-		<PackageReference Include="System.Text.Json" Version="9.0.5" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" /> <!-- Alterado para versão 8.0.5 -->
 	</ItemGroup>
 
 	<ItemGroup>
