--- a/GS - Dotnet/SafeZone.Infrastructure/SafeZone.Infrastructure.csproj
+++ b/GS - Dotnet/SafeZone.Infrastructure/SafeZone.Infrastructure.csproj
@@ -1,24 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\SafeZone.Domain\SafeZone.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\SafeZone.Domain\SafeZone.Domain.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.5" />
-  </ItemGroup>
-
-
+	<ItemGroup>
+		<!-- Usar a versão correta do Microsoft.EntityFrameworkCore para compatibilidade com Oracle -->
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
+		<PackageReference Include="Oracle.ManagedDataAccess" Version="19.12.0" />
+		<!-- Versão correta do Oracle.EntityFrameworkCore -->
+		<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="19.12.1" />
+		<PackageReference Include="Oracle.EntityFrameworkCore" Version="8.21.121" />
+		<!-- Garantir que a versão do Relational seja compatível com a versão do Oracle -->
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.5" />
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+		<PackageReference Include="System.Text.Json" Version="8.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+	</ItemGroup>
 
 	<PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
 </Project>
