--- a/GS - Dotnet/SafeZone.Infrastructure/appsettings.json
+++ b/GS - Dotnet/SafeZone.Infrastructure/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "User Id=rm554176;Password=180505;Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=oracle.fiap.com.br)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=ORCL)))"
+        "DefaultConnection": "User Id=rm554176;Password=180505;Data Source=oracle.fiap.com.br:1521/ORCL"
     },
     "Logging": {
         "LogLevel": {
