--- a/GS - Dotnet/SafeZone.Tests/SafeZone.Tests.csproj
+++ b/GS - Dotnet/SafeZone.Tests/SafeZone.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -10,13 +10,22 @@
 
 	<ItemGroup>
 		<PackageReference Include="coverlet.collector" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
+		<PackageReference Include="Oracle.ManagedDataAccess" Version="19.12.0" />
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+		<!-- Alterado para 6.0.0 -->
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
+			
 		</PackageReference>
 		<PackageReference Include="Moq" Version="4.20.72" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.5" />
+		<PackageReference Include="Oracle.EntityFrameworkCore" Version="8.0.0" />
+		<!-- Alterado para 8.0.0 -->
 	</ItemGroup>
 
 	<ItemGroup>
